CMSC 430 Compiler Theory and Design/Project 2/Project 2 Skeleton Code/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header variables body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER error ';'

    4 optional_parameters: parameters
    5                    | %empty

    6 parameters: parameters ',' parameter
    7           | parameter

    8 parameter: IDENTIFIER ':' type

    9 variables: variables variable
   10          | %empty

   11 variable: IDENTIFIER ':' type IS statement_
   12         | IDENTIFIER ':' LIST OF type IS list ';'
   13         | IDENTIFIER error IS statement_

   14 type: INTEGER
   15     | REAL
   16     | CHARACTER

   17 list: '(' expressions ')'

   18 expressions: expressions ',' expression
   19            | expression

   20 body: BEGIN_ statement_ END ';'

   21 statement_: statement ';'
   22           | error ';'

   23 statement: expression
   24          | WHEN condition ',' expression ':' expression
   25          | WHEN error ';'
   26          | SWITCH expression IS cases OTHERS ARROW statement_ ENDSWITCH
   27          | IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF
   28          | FOLD direction operator list_choice ENDFOLD

   29 elsif_clauses: elsif_clauses ELSIF condition THEN statement_
   30              | %empty

   31 cases: cases case
   32      | %empty

   33 case: CASE INT_LITERAL ARROW statement_
   34     | CASE error ARROW statement_

   35 direction: LEFT
   36          | RIGHT

   37 operator: ADDOP
   38         | MULOP

   39 list_choice: list
   40            | IDENTIFIER

   41 condition: or_condition

   42 or_condition: or_condition OROP and_condition
   43             | and_condition

   44 and_condition: and_condition ANDOP not_condition
   45              | not_condition

   46 not_condition: NOTOP not_condition
   47              | relation

   48 relation: '(' condition ')'
   49         | expression RELOP expression

   50 expression: expression ADDOP term
   51           | term

   52 term: term MULOP power
   53     | term MODOP power
   54     | power

   55 power: unary EXPOP power
   56      | unary

   57 unary: NEGOP unary
   58      | primary

   59 primary: '(' expression ')'
   60        | INT_LITERAL
   61        | REAL_LITERAL
   62        | CHAR_LITERAL
   63        | IDENTIFIER '(' expression ')'
   64        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 48 59 63
    ')' (41) 17 48 59 63
    ',' (44) 6 18 24
    ':' (58) 8 11 12 24
    ';' (59) 2 3 12 20 21 22 25
    error (256) 3 13 22 25 34
    IDENTIFIER (258) 2 3 8 11 12 13 40 63 64
    INT_LITERAL (259) 33 60
    REAL_LITERAL (260) 61
    CHAR_LITERAL (261) 62
    ADDOP (262) 37 50
    MULOP (263) 38 52
    MODOP (264) 53
    EXPOP (265) 55
    NEGOP (266) 57
    ANDOP (267) 44
    OROP (268) 42
    NOTOP (269) 46
    RELOP (270) 49
    ARROW (271) 26 33 34
    BEGIN_ (272) 20
    CASE (273) 33 34
    CHARACTER (274) 16
    ELSE (275) 27
    ELSIF (276) 29
    END (277) 20
    ENDIF (278) 27
    ENDFOLD (279) 28
    ENDSWITCH (280) 26
    FOLD (281) 28
    FUNCTION (282) 2 3
    IF (283) 27
    INTEGER (284) 14
    IS (285) 11 12 13 26
    LEFT (286) 35
    LIST (287) 12
    OF (288) 12
    OTHERS (289) 26
    REAL (290) 15
    RETURNS (291) 2
    RIGHT (292) 36
    SWITCH (293) 26
    THEN (294) 27 29
    WHEN (295) 24 25


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    function (47)
        on left: 1
        on right: 0
    function_header (48)
        on left: 2 3
        on right: 1
    optional_parameters (49)
        on left: 4 5
        on right: 2
    parameters (50)
        on left: 6 7
        on right: 4 6
    parameter (51)
        on left: 8
        on right: 6 7
    variables (52)
        on left: 9 10
        on right: 1 9
    variable (53)
        on left: 11 12 13
        on right: 9
    type (54)
        on left: 14 15 16
        on right: 2 8 11 12
    list (55)
        on left: 17
        on right: 12 39
    expressions (56)
        on left: 18 19
        on right: 17 18
    body (57)
        on left: 20
        on right: 1
    statement_ (58)
        on left: 21 22
        on right: 11 13 20 26 27 29 33 34
    statement (59)
        on left: 23 24 25 26 27 28
        on right: 21
    elsif_clauses (60)
        on left: 29 30
        on right: 27 29
    cases (61)
        on left: 31 32
        on right: 26 31
    case (62)
        on left: 33 34
        on right: 31
    direction (63)
        on left: 35 36
        on right: 28
    operator (64)
        on left: 37 38
        on right: 28
    list_choice (65)
        on left: 39 40
        on right: 28
    condition (66)
        on left: 41
        on right: 24 27 29 48
    or_condition (67)
        on left: 42 43
        on right: 41 42
    and_condition (68)
        on left: 44 45
        on right: 42 43 44
    not_condition (69)
        on left: 46 47
        on right: 44 45 46
    relation (70)
        on left: 48 49
        on right: 47
    expression (71)
        on left: 50 51
        on right: 18 19 23 24 26 49 50 59 63
    term (72)
        on left: 52 53 54
        on right: 50 51 52 53
    power (73)
        on left: 55 56
        on right: 52 53 54 55
    unary (74)
        on left: 57 58
        on right: 55 56 57
    primary (75)
        on left: 59 60 61 62 63 64
        on right: 58


State 0

    0 $accept: . function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION . IDENTIFIER optional_parameters RETURNS type ';'
    3                | FUNCTION . IDENTIFIER error ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function . $end

    $end  shift, and go to state 5


State 3

    1 function: function_header . variables body

    $default  reduce using rule 10 (variables)

    variables  go to state 6


State 4

    2 function_header: FUNCTION IDENTIFIER . optional_parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER . error ';'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    RETURNS  reduce using rule 5 (optional_parameters)

    optional_parameters  go to state 9
    parameters           go to state 10
    parameter            go to state 11


State 5

    0 $accept: function $end .

    $default  accept


State 6

    1 function: function_header variables . body
    9 variables: variables . variable

    IDENTIFIER  shift, and go to state 12
    BEGIN_      shift, and go to state 13

    variable  go to state 14
    body      go to state 15


State 7

    3 function_header: FUNCTION IDENTIFIER error . ';'

    ';'  shift, and go to state 16


State 8

    8 parameter: IDENTIFIER . ':' type

    ':'  shift, and go to state 17


State 9

    2 function_header: FUNCTION IDENTIFIER optional_parameters . RETURNS type ';'

    RETURNS  shift, and go to state 18


State 10

    4 optional_parameters: parameters .
    6 parameters: parameters . ',' parameter

    ','  shift, and go to state 19

    $default  reduce using rule 4 (optional_parameters)


State 11

    7 parameters: parameter .

    $default  reduce using rule 7 (parameters)


State 12

   11 variable: IDENTIFIER . ':' type IS statement_
   12         | IDENTIFIER . ':' LIST OF type IS list ';'
   13         | IDENTIFIER . error IS statement_

    error  shift, and go to state 20
    ':'    shift, and go to state 21


State 13

   20 body: BEGIN_ . statement_ END ';'

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    FOLD          shift, and go to state 28
    IF            shift, and go to state 29
    SWITCH        shift, and go to state 30
    WHEN          shift, and go to state 31
    '('           shift, and go to state 32

    statement_  go to state 33
    statement   go to state 34
    expression  go to state 35
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 14

    9 variables: variables variable .

    $default  reduce using rule 9 (variables)


State 15

    1 function: function_header variables body .

    $default  reduce using rule 1 (function)


State 16

    3 function_header: FUNCTION IDENTIFIER error ';' .

    $default  reduce using rule 3 (function_header)


State 17

    8 parameter: IDENTIFIER ':' . type

    CHARACTER  shift, and go to state 40
    INTEGER    shift, and go to state 41
    REAL       shift, and go to state 42

    type  go to state 43


State 18

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS . type ';'

    CHARACTER  shift, and go to state 40
    INTEGER    shift, and go to state 41
    REAL       shift, and go to state 42

    type  go to state 44


State 19

    6 parameters: parameters ',' . parameter

    IDENTIFIER  shift, and go to state 8

    parameter  go to state 45


State 20

   13 variable: IDENTIFIER error . IS statement_

    IS  shift, and go to state 46


State 21

   11 variable: IDENTIFIER ':' . type IS statement_
   12         | IDENTIFIER ':' . LIST OF type IS list ';'

    CHARACTER  shift, and go to state 40
    INTEGER    shift, and go to state 41
    LIST       shift, and go to state 47
    REAL       shift, and go to state 42

    type  go to state 48


State 22

   22 statement_: error . ';'

    ';'  shift, and go to state 49


State 23

   63 primary: IDENTIFIER . '(' expression ')'
   64        | IDENTIFIER .

    '('  shift, and go to state 50

    $default  reduce using rule 64 (primary)


State 24

   60 primary: INT_LITERAL .

    $default  reduce using rule 60 (primary)


State 25

   61 primary: REAL_LITERAL .

    $default  reduce using rule 61 (primary)


State 26

   62 primary: CHAR_LITERAL .

    $default  reduce using rule 62 (primary)


State 27

   57 unary: NEGOP . unary

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    unary    go to state 51
    primary  go to state 39


State 28

   28 statement: FOLD . direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 52
    RIGHT  shift, and go to state 53

    direction  go to state 54


State 29

   27 statement: IF . condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    condition      go to state 57
    or_condition   go to state 58
    and_condition  go to state 59
    not_condition  go to state 60
    relation       go to state 61
    expression     go to state 62
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 30

   26 statement: SWITCH . expression IS cases OTHERS ARROW statement_ ENDSWITCH

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 63
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 31

   24 statement: WHEN . condition ',' expression ':' expression
   25          | WHEN . error ';'

    error         shift, and go to state 64
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    condition      go to state 65
    or_condition   go to state 58
    and_condition  go to state 59
    not_condition  go to state 60
    relation       go to state 61
    expression     go to state 62
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 32

   59 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 66
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 33

   20 body: BEGIN_ statement_ . END ';'

    END  shift, and go to state 67


State 34

   21 statement_: statement . ';'

    ';'  shift, and go to state 68


State 35

   23 statement: expression .
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69

    $default  reduce using rule 23 (statement)


State 36

   51 expression: term .
   52 term: term . MULOP power
   53     | term . MODOP power

    MULOP  shift, and go to state 70
    MODOP  shift, and go to state 71

    $default  reduce using rule 51 (expression)


State 37

   54 term: power .

    $default  reduce using rule 54 (term)


State 38

   55 power: unary . EXPOP power
   56      | unary .

    EXPOP  shift, and go to state 72

    $default  reduce using rule 56 (power)


State 39

   58 unary: primary .

    $default  reduce using rule 58 (unary)


State 40

   16 type: CHARACTER .

    $default  reduce using rule 16 (type)


State 41

   14 type: INTEGER .

    $default  reduce using rule 14 (type)


State 42

   15 type: REAL .

    $default  reduce using rule 15 (type)


State 43

    8 parameter: IDENTIFIER ':' type .

    $default  reduce using rule 8 (parameter)


State 44

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type . ';'

    ';'  shift, and go to state 73


State 45

    6 parameters: parameters ',' parameter .

    $default  reduce using rule 6 (parameters)


State 46

   13 variable: IDENTIFIER error IS . statement_

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    FOLD          shift, and go to state 28
    IF            shift, and go to state 29
    SWITCH        shift, and go to state 30
    WHEN          shift, and go to state 31
    '('           shift, and go to state 32

    statement_  go to state 74
    statement   go to state 34
    expression  go to state 35
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 47

   12 variable: IDENTIFIER ':' LIST . OF type IS list ';'

    OF  shift, and go to state 75


State 48

   11 variable: IDENTIFIER ':' type . IS statement_

    IS  shift, and go to state 76


State 49

   22 statement_: error ';' .

    $default  reduce using rule 22 (statement_)


State 50

   63 primary: IDENTIFIER '(' . expression ')'

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 77
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 51

   57 unary: NEGOP unary .

    $default  reduce using rule 57 (unary)


State 52

   35 direction: LEFT .

    $default  reduce using rule 35 (direction)


State 53

   36 direction: RIGHT .

    $default  reduce using rule 36 (direction)


State 54

   28 statement: FOLD direction . operator list_choice ENDFOLD

    ADDOP  shift, and go to state 78
    MULOP  shift, and go to state 79

    operator  go to state 80


State 55

   46 not_condition: NOTOP . not_condition

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    not_condition  go to state 81
    relation       go to state 61
    expression     go to state 62
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 56

   48 relation: '(' . condition ')'
   59 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    condition      go to state 82
    or_condition   go to state 58
    and_condition  go to state 59
    not_condition  go to state 60
    relation       go to state 61
    expression     go to state 83
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 57

   27 statement: IF condition . THEN statement_ elsif_clauses ELSE statement_ ENDIF

    THEN  shift, and go to state 84


State 58

   41 condition: or_condition .
   42 or_condition: or_condition . OROP and_condition

    OROP  shift, and go to state 85

    $default  reduce using rule 41 (condition)


State 59

   43 or_condition: and_condition .
   44 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 86

    $default  reduce using rule 43 (or_condition)


State 60

   45 and_condition: not_condition .

    $default  reduce using rule 45 (and_condition)


State 61

   47 not_condition: relation .

    $default  reduce using rule 47 (not_condition)


State 62

   49 relation: expression . RELOP expression
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69
    RELOP  shift, and go to state 87


State 63

   26 statement: SWITCH expression . IS cases OTHERS ARROW statement_ ENDSWITCH
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69
    IS     shift, and go to state 88


State 64

   25 statement: WHEN error . ';'

    ';'  shift, and go to state 89


State 65

   24 statement: WHEN condition . ',' expression ':' expression

    ','  shift, and go to state 90


State 66

   50 expression: expression . ADDOP term
   59 primary: '(' expression . ')'

    ADDOP  shift, and go to state 69
    ')'    shift, and go to state 91


State 67

   20 body: BEGIN_ statement_ END . ';'

    ';'  shift, and go to state 92


State 68

   21 statement_: statement ';' .

    $default  reduce using rule 21 (statement_)


State 69

   50 expression: expression ADDOP . term

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    term     go to state 93
    power    go to state 37
    unary    go to state 38
    primary  go to state 39


State 70

   52 term: term MULOP . power

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    power    go to state 94
    unary    go to state 38
    primary  go to state 39


State 71

   53 term: term MODOP . power

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    power    go to state 95
    unary    go to state 38
    primary  go to state 39


State 72

   55 power: unary EXPOP . power

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    power    go to state 96
    unary    go to state 38
    primary  go to state 39


State 73

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' .

    $default  reduce using rule 2 (function_header)


State 74

   13 variable: IDENTIFIER error IS statement_ .

    $default  reduce using rule 13 (variable)


State 75

   12 variable: IDENTIFIER ':' LIST OF . type IS list ';'

    CHARACTER  shift, and go to state 40
    INTEGER    shift, and go to state 41
    REAL       shift, and go to state 42

    type  go to state 97


State 76

   11 variable: IDENTIFIER ':' type IS . statement_

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    FOLD          shift, and go to state 28
    IF            shift, and go to state 29
    SWITCH        shift, and go to state 30
    WHEN          shift, and go to state 31
    '('           shift, and go to state 32

    statement_  go to state 98
    statement   go to state 34
    expression  go to state 35
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 77

   50 expression: expression . ADDOP term
   63 primary: IDENTIFIER '(' expression . ')'

    ADDOP  shift, and go to state 69
    ')'    shift, and go to state 99


State 78

   37 operator: ADDOP .

    $default  reduce using rule 37 (operator)


State 79

   38 operator: MULOP .

    $default  reduce using rule 38 (operator)


State 80

   28 statement: FOLD direction operator . list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 100
    '('         shift, and go to state 101

    list         go to state 102
    list_choice  go to state 103


State 81

   46 not_condition: NOTOP not_condition .

    $default  reduce using rule 46 (not_condition)


State 82

   48 relation: '(' condition . ')'

    ')'  shift, and go to state 104


State 83

   49 relation: expression . RELOP expression
   50 expression: expression . ADDOP term
   59 primary: '(' expression . ')'

    ADDOP  shift, and go to state 69
    RELOP  shift, and go to state 87
    ')'    shift, and go to state 91


State 84

   27 statement: IF condition THEN . statement_ elsif_clauses ELSE statement_ ENDIF

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    FOLD          shift, and go to state 28
    IF            shift, and go to state 29
    SWITCH        shift, and go to state 30
    WHEN          shift, and go to state 31
    '('           shift, and go to state 32

    statement_  go to state 105
    statement   go to state 34
    expression  go to state 35
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 85

   42 or_condition: or_condition OROP . and_condition

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    and_condition  go to state 106
    not_condition  go to state 60
    relation       go to state 61
    expression     go to state 62
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 86

   44 and_condition: and_condition ANDOP . not_condition

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    NOTOP         shift, and go to state 55
    '('           shift, and go to state 56

    not_condition  go to state 107
    relation       go to state 61
    expression     go to state 62
    term           go to state 36
    power          go to state 37
    unary          go to state 38
    primary        go to state 39


State 87

   49 relation: expression RELOP . expression

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 108
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 88

   26 statement: SWITCH expression IS . cases OTHERS ARROW statement_ ENDSWITCH

    $default  reduce using rule 32 (cases)

    cases  go to state 109


State 89

   25 statement: WHEN error ';' .

    $default  reduce using rule 25 (statement)


State 90

   24 statement: WHEN condition ',' . expression ':' expression

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 110
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 91

   59 primary: '(' expression ')' .

    $default  reduce using rule 59 (primary)


State 92

   20 body: BEGIN_ statement_ END ';' .

    $default  reduce using rule 20 (body)


State 93

   50 expression: expression ADDOP term .
   52 term: term . MULOP power
   53     | term . MODOP power

    MULOP  shift, and go to state 70
    MODOP  shift, and go to state 71

    $default  reduce using rule 50 (expression)


State 94

   52 term: term MULOP power .

    $default  reduce using rule 52 (term)


State 95

   53 term: term MODOP power .

    $default  reduce using rule 53 (term)


State 96

   55 power: unary EXPOP power .

    $default  reduce using rule 55 (power)


State 97

   12 variable: IDENTIFIER ':' LIST OF type . IS list ';'

    IS  shift, and go to state 111


State 98

   11 variable: IDENTIFIER ':' type IS statement_ .

    $default  reduce using rule 11 (variable)


State 99

   63 primary: IDENTIFIER '(' expression ')' .

    $default  reduce using rule 63 (primary)


State 100

   40 list_choice: IDENTIFIER .

    $default  reduce using rule 40 (list_choice)


State 101

   17 list: '(' . expressions ')'

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expressions  go to state 112
    expression   go to state 113
    term         go to state 36
    power        go to state 37
    unary        go to state 38
    primary      go to state 39


State 102

   39 list_choice: list .

    $default  reduce using rule 39 (list_choice)


State 103

   28 statement: FOLD direction operator list_choice . ENDFOLD

    ENDFOLD  shift, and go to state 114


State 104

   48 relation: '(' condition ')' .

    $default  reduce using rule 48 (relation)


State 105

   27 statement: IF condition THEN statement_ . elsif_clauses ELSE statement_ ENDIF

    $default  reduce using rule 30 (elsif_clauses)

    elsif_clauses  go to state 115


State 106

   42 or_condition: or_condition OROP and_condition .
   44 and_condition: and_condition . ANDOP not_condition

    ANDOP  shift, and go to state 86

    $default  reduce using rule 42 (or_condition)


State 107

   44 and_condition: and_condition ANDOP not_condition .

    $default  reduce using rule 44 (and_condition)


State 108

   49 relation: expression RELOP expression .
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69

    $default  reduce using rule 49 (relation)


State 109

   26 statement: SWITCH expression IS cases . OTHERS ARROW statement_ ENDSWITCH
   31 cases: cases . case

    CASE    shift, and go to state 116
    OTHERS  shift, and go to state 117

    case  go to state 118


State 110

   24 statement: WHEN condition ',' expression . ':' expression
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69
    ':'    shift, and go to state 119


State 111

   12 variable: IDENTIFIER ':' LIST OF type IS . list ';'

    '('  shift, and go to state 101

    list  go to state 120


State 112

   17 list: '(' expressions . ')'
   18 expressions: expressions . ',' expression

    ','  shift, and go to state 121
    ')'  shift, and go to state 122


State 113

   19 expressions: expression .
   50 expression: expression . ADDOP term

    ADDOP  shift, and go to state 69

    $default  reduce using rule 19 (expressions)


State 114

   28 statement: FOLD direction operator list_choice ENDFOLD .

    $default  reduce using rule 28 (statement)


State 115

   27 statement: IF condition THEN statement_ elsif_clauses . ELSE statement_ ENDIF
   29 elsif_clauses: elsif_clauses . ELSIF condition THEN statement_

    ELSE   shift, and go to state 123
    ELSIF  shift, and go to state 124


State 116

   33 case: CASE . INT_LITERAL ARROW statement_
   34     | CASE . error ARROW statement_

    error        shift, and go to state 125
    INT_LITERAL  shift, and go to state 126


State 117

   26 statement: SWITCH expression IS cases OTHERS . ARROW statement_ ENDSWITCH

    ARROW  shift, and go to state 127


State 118

   31 cases: cases case .

    $default  reduce using rule 31 (cases)


State 119

   24 statement: WHEN condition ',' expression ':' . expression

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 128
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 120

   12 variable: IDENTIFIER ':' LIST OF type IS list . ';'

    ';'  shift, and go to state 129


State 121

   18 expressions: expressions ',' . expression

    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    '('           shift, and go to state 32

    expression  go to state 130
    term        go to state 36
    power       go to state 37
    unary       go to state 38
    primary     go to state 39


State 122

   17 list: '(' expressions ')' .

    $default  reduce using rule 17 (list)


State 123

   27 statement: IF condition THEN statement_ elsif_clauses ELSE . statement_ ENDIF

    error         shift, and go to state 22
    IDENTIFIER    shift, and go to state 23
    INT_LITERAL   shift, and go to state 24
    REAL_LITERAL  shift, and go to state 25
    CHAR_LITERAL  shift, and go to state 26
    NEGOP         shift, and go to state 27
    FOLD          shift, and go to state 28
    IF            shift, and go to state 29
    SWITCH        shift, and go to state 30
    WHEN          shift, and go to state 31
    '('           shift, and go to state 32
